spade-tests/src/snapshots/spade_tests__hir_lowering__argument_list_tests__named_struct_patterns_errors_if_binding_to_undefined_name.snap
---
source: spade-tests/src/hir_lowering.rs
---
struct Test{a: bool, b: bool}

fn main() -> Test {
    Test$(a: true, b: true, c: true)
}


error: No such argument: c
  ┌─ testinput:4:29
  │
1 │ struct Test{a: bool, b: bool}
  │ ----------------------------- struct defined here
  ·
4 │     Test$(a: true, b: true, c: true)
  │                             ^ No such argument


